--- a/styles/lab_four_starter.css
+++ b/styles/lab_four_starter.css
@@ -1,15 +1,3 @@
-/*
-.remove-assignment-content {
-  font-family: "Roboto", sans-serif;
-  font-size: 2rem;
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-*/
-
 /*Hero Background Image with parralax scroll*/
 .hero-container {
   display: flex;
@@ -34,7 +22,7 @@
 /*Content Section*/
 .content-container {
   display: flex;
-  min-height: 25vh;
+  min-height: 15vh;
 }
 
 .content-container h1 {
@@ -74,6 +62,7 @@
 /*Accordion Section*/
 .accordion-container {
   display: flex;
+  flex-direction: column;
   color:black;
   min-height: 25vh;
 }
@@ -81,6 +70,38 @@
 .accordion-container h1 {
   color: black;
   font-family: "Imbue", serif;
+}
+
+.accordion-container p {
+  color: black;
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+}
+
+.accordion {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  text-align: left;
+  border: none;
+  outline: none;
+  transition: 0.4s;
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active, .accordion:hover {
+  background-color: #ccc;
+}
+
+/* Style the accordion panel. Note: hidden by default */
+.panel {
+  padding: 0 18px;
+  background-color: white;
+  max-height: 0;
+  overflow: hidden;
+  transition: 0.2s ease-out;
 }
 
 .footer-container {
