--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -1,8 +1,7 @@
 body {
-  font-family: "Roboto", sans-serif;
-  font-size: 1rem;
-  font-weight: 500;
-  line-height: 1.1;
+  color: black;
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
 }
 
 h1,
@@ -17,6 +16,7 @@ p {
 }
 
 h1 {
+  font-family: "Imbue", serif;
   font-size: 2.5rem;
   font-weight: 600;
 }
