--- a/styles/lab_four_starter.css
+++ b/styles/lab_four_starter.css
@@ -31,14 +31,15 @@ body {
 
 /*Content Section*/
 .content-container {
+  display: flex;
+  column-gap: 40px;
+  padding: 50px;
   margin: auto;
   margin-top: 50px;
-  display: flex;
   min-height: 15vh;
 }
 
 .vinyl-text {
-  padding: 30px;
   display: flex;
   flex-direction: column;
 }
@@ -69,6 +70,7 @@ body {
   padding: 10px;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 20px;
   background-color: #ebeae3;
   width: 150px;
   transition: 0.2s;
