--- a/styles/lab_four_starter.css
+++ b/styles/lab_four_starter.css
@@ -11,7 +11,7 @@ body {
 /*Hero Background Image with parralax scroll*/
 .hero-container {
   display: flex;
-  background: url(/assets/turntable.jpg);
+  background: url(../assets/turntable.jpg);
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
