--- a/styles/lab_four_starter.css
+++ b/styles/lab_four_starter.css
@@ -12,6 +12,7 @@ body {
 .hero-container {
   display: flex;
   background: url(../assets/turntable.jpg);
+  color: #fff;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
