--- a/styles/lab_four_starter.css
+++ b/styles/lab_four_starter.css
@@ -18,7 +18,7 @@ button:focus {
   display: flex;
   background: url(../assets/turntable.jpg);
   background-attachment: fixed;
-  background-position: center;
+  background-position: left;
   background-repeat: no-repeat;
   background-size: cover;
   min-height: 100vh;
