--- a/styles/responsiveness.css
+++ b/styles/responsiveness.css
@@ -1,5 +1,8 @@
 /*Responsiveness for Mobile*/
 @media screen and (max-width:768px) {
+    .hero-container {
+        max-width: 100vh;
+    }
     .content-container {
         flex-direction: column;
     }
