--- a/styles/lab_four_starter.css
+++ b/styles/lab_four_starter.css
@@ -20,7 +20,7 @@ button:focus {
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 100% 100%;
   min-height: 100vh;
   justify-content: center;
   align-items: center;
