--- a/styles/responsiveness.css
+++ b/styles/responsiveness.css
@@ -1,5 +1,8 @@
 /*Responsiveness for Mobile*/
 @media screen and (max-width:768px) {
+    .hero-container h2 {
+        font-size: 5vw;
+    }
     .content-container {
         flex-direction: column;
     }
