--- a/styles/lab_four_starter.css
+++ b/styles/lab_four_starter.css
@@ -27,9 +27,8 @@ button:focus {
   align-items: center;
 }
 
-/*H1 font, size, and inverted stylings*/
+/*H1 size, and inverted stylings*/
 .hero-container h1 {
-  font-family: "Imbue", serif;
   color: rgb(255, 255, 255);
   mix-blend-mode: difference;
   font-size: 10vw;
